Удалил темную тему из приложения

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,9 @@
         android:foregroundGravity="center"
         android:paddingTop="@dimen/padding_button_vertical"
         app:menu="@menu/bottom_nav_menu"
+        app:itemIconTint="@color/bnv_tab_item_foreground"
+        android:background="@color/white_color"
+        android:backgroundTintMode="multiply"
 
         />
 </LinearLayout>
